--- a/static/css/drupal_header.css
+++ b/static/css/drupal_header.css
@@ -1,9 +1,10 @@
     body {
-      margin: 0px;
-      padding: 0;
+        margin: 0px;
+        padding: 0;
     }
     
     header.top {
+        font-family: 'Source Sans Pro', sans-serif;
         background: url(//nist.gov/sites/all/themes/nist_style/images/build/bg_pattern.png) repeat #1574b3;
     }
 
@@ -29,7 +30,7 @@
         color: white;
     }
 
-    h2.section-header__title {
+    h1.section-header__title {
         text-transform: uppercase;
         margin-top: 0;
         margin-bottom: 0;
@@ -37,11 +38,12 @@
         padding-top: 1.25rem;
         padding-bottom: 20px;
         padding-bottom: 1.25rem;
-        font-size: 1.65rem;
+        font-size: 1.75rem;
         font-style: normal;
+        font-weight: 700;
     }
     
-    h2.section-header__title a {
+    h1.section-header__title a {
         text-decoration: none;
         color: white;
     }
